--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ body > .info {
   padding: var(--padding);
 }
 
-.info .matadata .hashtags {
+.info .metadata .hashtags {
   display: flex;
   font-size: var(--font-small);
   color: var(--blue-color);
@@ -118,23 +118,35 @@ body > .info {
   margin-right: var(--padding);
 }
 
-.info .matadata .titleAndButton {
+.info .metadata .titleAndButton {
   display: flex;
 }
 
-.info .matadata .titleAndButton .title {
+.info .metadata .titleAndButton .title {
   font-size: var(--font-medium);
 
   /* title 줄 수를 2줄로 제한 */
+  /* display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden; */
+  margin-right: var(--padding);
+}
+
+.info .metadata .titleAndButton .title.clamp {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
   overflow: hidden;
-  margin-right: var(--padding);
 }
 
 .info .metadata .titleAndButton .moreBtn {
   height: 100%;
+  transition: transform 300ms ease-in-out;
+}
+
+.info .metadata .titleAndButton .moreBtn.clicked {
+  transform: rotate(180deg);
 }
 
 .info .views {
